--- a/minigame/pom.xml
+++ b/minigame/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>MinigamePlugin</name>
+    <name>MinigamesPlugin</name>
 
     <repositories>
         <repository>
