--- a/minigame/src/main/resources/plugin.yml
+++ b/minigame/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: MinigamePlugin
-main: com.thomas.minigame.MinigamePlugin
-version: 1.0
+name: MinigamesPlugin
+main: com.thomas.minigame.MinigamesPlugin
+version: 1.1
 api-version: 1.20
